--- a/static/style.css
+++ b/static/style.css
@@ -119,6 +119,7 @@ p{
   }
 
 
+  /*For the star rating system*/
 .rate {
     float: left;
     height: 46px;
@@ -154,3 +155,34 @@ p{
 .rate > label:hover ~ input:checked ~ label {
     color: #c59b08;
 }
+
+
+
+/*For the navigation bar*/
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: crimson;
+    color: white;
+  }
