--- a/static/login.css
+++ b/static/login.css
@@ -22,7 +22,7 @@ body{
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 18px;
   }
   
   /* Change the color of links on hover */
@@ -35,4 +35,12 @@ body{
   .topnav a.active {
     background-color: crimson;
     color: white;
+  }
+  .topnav b{
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 18px;
   }
