--- a/static/style.css
+++ b/static/style.css
@@ -172,7 +172,7 @@ p{
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 18px;
   }
   
   /* Change the color of links on hover */
@@ -185,4 +185,13 @@ p{
   .topnav a.active {
     background-color: crimson;
     color: white;
+  }
+
+  .topnav b{
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 18px;
   }
