Added admin control tab
Added an admin control tab that is only visible when the user is logged in with admin priviledges

--- a/static/login.css
+++ b/static/login.css
@@ -44,3 +44,14 @@ body{
     text-decoration: none;
     font-size: 18px;
   }
+
+  .hidden{
+      
+    visibility: hidden;
+    
+ }
+ .visible{
+      
+  visibility: visible;
+  
+}
